--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6859,4 +6859,7 @@ header img {
 .divider {
   background-color: blue; }
 
+.newsfeed .design {
+  width: 100%; }
+
 /*# sourceMappingURL=main.css.map */
