updated third section

--- a/assets/sass/_bases.scss
+++ b/assets/sass/_bases.scss
@@ -46,4 +46,13 @@ header{
         }
 
       
+     /*THIRD SECTION*/
+     .third-section{
+        
+     }
      
+.third-section{
+  img{
+  width: 100%; 
+  }
+}
