--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,5 @@
 @import 'materialize/sass/materialize.scss';
 @import '_mixin.scss';
 @import '_variables.scss';
+@import'style.scss';
 @import '_bases.scss';
