--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -62,4 +62,8 @@ header{
             padding-top: 25px;
 
         }
+        .text{
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
     }
